# docuverse-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/corpus_aws/: ec2-amis.md  ec2-ebs-volumes.md  ec2-getting-started.md  ec2-instances.md  ec2-key-pairs.md  ec2-security-groups.md  ec2-what-is.md  iam-best-practices.md  iam-identities.md  iam-policies-overview.md  iam-roles-overview.md  iam-security-credentials.md  iam-users-overview.md  iam-what-is.md  iam.md  lambda-env-vars.md  lambda-functions.md  lambda-getting-started.md  lambda-invocation.md  lambda-permissions.md  lambda-runtimes.md  lambda-what-is.md  s3-buckets-overview.md  s3-getting-started.md  s3-objects-overview.md  s3-security-best-practices.md  s3-upload-objects.md  s3-versioning.md  s3-what-is.md  s3.md
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  LESSONS.md
docs/images/: README.md
eval/: gold_set.yaml
scripts/: fetch_aws_docs.py
src/docuverse/: answer.py  api.py  embed.py  evaluate.py  ingest.py  prompt.py  retrieve.py  store.py  ui.py
tests/: test_answer.py  test_api.py  test_embed.py  test_evaluate.py  test_health.py  test_ingest.py  test_prompt.py  test_retrieve.py  test_store.py  test_ui.py
