[project]
name = "docuverse-rag"
version = "0.1.0"
description = "RAG document Q&A system skeleton."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "sentence-transformers",
    "numpy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
